# PROASSIST_RAG_QA

./: .gitignore  .pre-commit-config.yaml  Proassist.ipynb  README.md  install_dependencies.sh  pyproject.toml  ruff.toml  run.sh
RAG_QA/: main.py
logger/: create_logger.py
rag_qa/: hf_download.py  main.py
utils/embeddings/: faiss_storage.py
utils/model_loader/: loader.py
utils/text_splitter/: splitter.py
