[project]
name = "proassist-rag-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hf-xet>=1.1.7",
    "huggingface-hub[hf-transfer]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "logger>=1.4",
    "pre-commit>=4.3.0",
    "sentence-transformers>=5.1.0",
]

[dependency-groups]
cpu = [
    "llama-cpp-python>=0.3.16",
    "faiss-cpu>=1.12.0",
]

gpu = [
    "ninja>=1.13.0",
    "packaging>=25.0",
    "setuptools>=80.9.0",
]

[tool.uv]
default-groups = ['cpu']
